feat(reservations): add new routes for reservations
There is a problem with the mapper
- should investigate the err 500 from the mapper
